# github-user

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ActivityView.jsx  ComparisonTable.jsx  ContributedView.jsx  Header.jsx  OverviewView.jsx  RepoModal.jsx  RepositoriesView.jsx  Sidebar.jsx  SocialInsightsView.jsx  UserInput.jsx  UserStats.jsx
src/: handlers.rs  main.rs  models.rs
