[package]
name = "github-user"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.4", features = ["fs"] }
cached = { version = "0.46", features = ["async"] }
tower = "0.5.2"
actix-web = "4.10.2"
regex = "1.11.1"
